# GU-DSL

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt  Core.wxi.in
Core/inc/: CoreDLL.h
Core/inc/Buffer/: RingBuffer.h  RingBuffer.inl  RingBufferList.h  RingBufferList.inl
Core/inc/Calibration/: CalData2D.h  CalData3DBase.h  CalDataDecoupledIntensity.h  CalDataPolynom.h  CalibrationFileWriter.h  PerspectiveCalibrationFileWriter.h
Core/inc/Camera/: CameraInformation.qt.h  ICamera.qt.h
Core/inc/Communication/: CommunicationClient.qt.h  CommunicationClientDetector.h  CommunicationData.qt.h  CommunicationServer.qt.h  CommunicationServerDetector.qt.h  InterProcessCommunication.h  LaserscannerMessage.h  LaserscannerTcpCommunication.h  Message.h  PtrDefinitions.h  TcpCommunication.h  UdpCommunication.h
Core/inc/Communication/Interfaces/: ICommunicationInformation.h  ICommunicationPlugin.h
Core/inc/DebugOutput/: DebugOutputWidget.qt.h  DebugStream.h  DebugStream.inl  Logger.h
Core/inc/Gui/Interfaces/: IGui.qt.h  IWidget.qt.h
Core/inc/Mediation/: Event.h  EventBus.h  EventListener.h  RuntimeEventBus.h
Core/inc/Mediation/EventListeners/: BasicEventListener.h  DynamicEventListener.h
Core/inc/Mediation/Events/: CloseEvent.h  ConnectCommunicationEvent.h  DisconnectCommunicationEvent.h  LoadDiagramsEvent.h  LoadProjectEvent.h  NewCommunicationDetectedEvent.h  OpenDiagramsEvent.h  OpenProjectEvent.h  RemoveCommunicationDetectedEvent.h  SelectIntegrationTimeEvent.h  SelectItemEvent.h  ShowViewerEvent.h
Core/inc/Mediation/Interfaces/: IEvent.h  IEventBus.h  IEventListener.h
Core/inc/Misc/: Enums.h  PlcDataHelper.h  PluginFinder.h  PortConnectionHelper.h  ProcessHandling.h  Property.h
Core/inc/Plugin/Factory/: DefaultPluginFactory.qt.h  PluginFactoryManager.qt.h
Core/inc/Plugin/Interfaces/: IPlugin.qt.h  IPluginFactory.qt.h  IPluginInitializer.qt.h  IPluginObject.qt.h
Core/inc/Processing/: ProcessingPlugin.qt.h  PtrDefinitions.h
Core/inc/Processing/Component/: ComponentDiagram.qt.h
Core/inc/Processing/Interfaces/: ICommunicationSource.qt.h  IImageProcessor.qt.h  IImageProvider.qt.h  IIntegerProcessor.qt.h  IIntegerProvider.qt.h  IInterface.qt.h  IObject.qt.h  IObjectParameters.h  IObjectPlugin.qt.h  IPort.qt.h  IPrimitivesArrayProcessor.qt.h  IPrimitivesArrayProvider.qt.h  IPrimitivesProcessor.qt.h  IPrimitivesProvider.qt.h  IProcessor.qt.h  IProvider.qt.h  ISupport2DRendering.h  ISupport3DRendering.h  ISupportCustomWidget.h  ISupportGLGPUInterop.h  ISupportGPGPUInterop.h  ISupportMultiple2DRendering.h  ISupportMultiple3DRendering.h  ISupportToolbar.h
Core/inc/Processing/Object/: Class.qt.h  Filter.qt.h  ObjectFactory.qt.h  Port.qt.h  PortSignalArgs.qt.h  Sink.qt.h  Source.qt.h
Core/inc/Processing/Ports/: ImageProcessorPort.qt.h  ImageProviderPort.qt.h  IntegerProcessorPort.qt.h  IntegerProviderPort.qt.h  PrimitivesArrayProcessorPort.qt.h  PrimitivesArrayProviderPort.qt.h  PrimitivesProcessorPort.qt.h  PrimitivesProviderPort.qt.h
Core/inc/Processing/Project/: Project.qt.h  ProjectExecutor.qt.h
Core/inc/Project/: DataProviderItem.qt.h  DiagramItem.qt.h  FilterItem.qt.h  Item.qt.h  ProjectItem.qt.h  SinkItem.qt.h  SourceItem.qt.h
Core/inc/Utilities/: CommandHelper.h  MacroHeaven.h  MainWindowHelper.h  PathUtils.h  ProgramOptions.h  StopWatch.h  StopWatchManager.h  StringUtils.h  UniqueName.h  WaitCondition.qt.h
Core/src/Calibration/: CalData2D.cpp  CalData3DBase.cpp  CalDataDecoupledIntensity.cpp  CalDataPolynom.cpp  CalibrationFileWriter.cpp  PerspectiveCalibrationFileWriter.cpp
Core/src/Camera/: CameraInformation.qt.cpp  ICamera.qt.cpp
Core/src/Communication/: CommunicationClient.qt.cpp  CommunicationClientDetector.qt.cpp  CommunicationData.qt.cpp  CommunicationServer.qt.cpp  CommunicationServerDetector.qt.cpp  InterProcessCommunication.cpp  Message.cpp  TcpCommunication.cpp  UdpCommunication.cpp
Core/src/Communication/Interfaces/: ICommunicationInformation.cpp  ICommunicationPlugin.cpp
Core/src/DebugOutput/: DebugOutputWidget.cpp  DebugStream.cpp  Logger.cpp
Core/src/Gui/Interfaces/: IGui.qt.cpp  IWidget.qt.cpp
Core/src/Mediation/: Event.cpp  EventBus.cpp  EventListener.cpp  RuntimeEventBus.cpp
Core/src/Mediation/EventListeners/: BasicEventListener.cpp  DynamicEventListener.cpp
Core/src/Mediation/Events/: CloseEvent.cpp  ConnectCommunicationEvent.cpp  DisconnectCommunicationEvent.cpp  LoadDiagramsEvent.cpp  LoadProjectEvent.cpp  NewCommunicationDetectedEvent.cpp  OpenDiagramsEvent.cpp  (+5 more)
Core/src/Misc/: PlcDataHelper.cpp  PluginFinder.cpp  ProcessHandling.cpp
Core/src/Processing/: ProcessingPlugin.cpp
Core/src/Project/: DataProviderItem.cpp  DiagramItem.cpp  FilterItem.cpp  Item.cpp  ProjectItem.cpp  SinkItem.cpp  SourceItem.cpp
Core/src/Utilities/: CommandHelper.cpp  MainWindowHelper.cpp  PathUtils.cpp  ProgramOptions.cpp  StopWatch.cpp  StopWatchManager.cpp  StringUtils.cpp  UniqueName.cpp  WaitCondition.qt.cpp
Geometry/: CMakeLists.txt  Geometry.wxi.in
Geometry/inc/BoundingBoxes/: BoundingRect2D.h  BoundingRect2D.inl
Geometry/inc/Camera/: CustomDatatypes.h
Geometry/inc/Misc/: GeometryDLL.h
Geometry/inc/Plane/: PlaneCoefficients.h
Geometry/inc/Primitives/: Circle2.h  Circle2.inl  Circle3.h  Circle3.inl  Line2.h  Line2.inl  Line3.h  Line3.inl  Point2.h  Point2.inl  Point3.h  Point3.inl  Polygon.h  Polygon.inl  Rect2.h  Rect2.inl  Rect3.h  Rect3.inl  Triangle2.h  Triangle2.inl  Triangle3.h  Triangle3.inl  vertex.h
Geometry/res/: resource.h
Geometry/src/: main.cpp
Geometry/src/Plane/: PlaneCoefficients.cpp
Geometry/src/Primitives/: vertex.cpp
Viewer/: CMakeLists.txt  Viewer.wxi.in
Viewer/inc/: MayaCamera.h  Viewer2D.qt.h  Viewer3D.qt.h  ViewerDLL.h  glwindow.qt.h
Viewer/inc/OpenGL/: SharedGLContext.h
Viewer/inc/Rendering/: GLPipeline.h  GLRenderObject.h  definitions.h  vertexformat.h
Viewer/res/: resource.h
Viewer/src/: MayaCamera.cpp  Viewer2D.cpp  Viewer3D.cpp  glwindow.cpp
Viewer/src/OpenGL/: SharedGLContext.cpp
Viewer/src/Rendering/: GLPipeline.cpp  GLRenderObject.cpp
(+78 files in other folders)
